# fast-graph

./: .gitignore  .npmignore  GRAPH_API.md  LICENSE  PERFORMANCE.md  README.md  build.sh  package.json  publish.sh  serve.js  single-test.html  spring-demo.html  test-canvas-constraints.html  test-physics.html  test-webgpu-limits.html  test.html  tsconfig.json
example/: index.html
rust-core/: Cargo.toml
rust-core/src/: lib.rs  physics.wgsl  renderer.rs
rust-core/src/shaders/: edges.wgsl  gradient.wgsl  nodes.wgsl
src/: FastGraph.tsx  examples.ts  index.ts  types.ts  utils.ts
